# shuffle-feed

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: config_loader.py  states.py
src/database/: core.py
src/handlers/: admin_commands.py  user_commands.py
src/keyboards/: keyboards.py
src/services/: logger.py  parser.py  sender.py
